@@ -328,6 +328,17 @@
       </component>
     </version>
   </module>
+  <module name="epiphany-extensions">
+    <version release="gnome-2.6">
+      <component name="epiphany-extensions" dir="epiphany-extensions" group="extras">
+	<podir dir="po"/>
+	<potname name="epiphany-extensions-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="evolution">
     <version release="gnome-2.6">
       <component name="evolution" dir="evolution" group="extras">
