@@ -1,3 +1,7 @@
+2004-01-02  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added epiphany-extensions.
+
 2003-12-31  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: zenity has been branched.
